Fix buttons when no SF/CCF is shown; inactive scrollbars on fancyworkspace on Windows; and a bug in exporting/sharing projects (custom vulnerabilities were omitted).

--- a/common/css/raster.css
+++ b/common/css/raster.css
@@ -802,7 +802,7 @@ div.th_remark {
 	background-image: url('../img/paper.png') !important;
 	background-size: 100px !important;
 	background-position: 15px 15px !important;
-	overflow: scroll !important;
+/*	overflow: scroll !important;*/
 }
 .plainworkspace {
     overflow: auto !important;
